<resources>

    <string name="app_name">DishServices</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">Home</string>
    <string-array name="Services">
        <item>airtel</item>
        <item>dish</item>
        <item>d2h</item>
        <item>tatasky</item>
    </string-array>
    <string-array name="Description">
        <item>Description1</item>
        <item>Description2</item>
        <item>Description3</item>
        <item>Description4</item>
    </string-array>
    <string name="nameerror">Enter Valid Name</string>
    <string name="emailerror">Enter Valid Email</string>
    <string name="passworderror">Enter Some Password</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="todo">TODO</string>
    <string name="dish">Dish</string>
    <string name="no">no.</string>
    <string name="todo1">TODO</string>
    <string name="services">Services</string>
    <string name="quatity">quatity</string>
    <string name="click">click</string>
    <string name="recharge_by_paytm">recharge by paytm</string>
    <string name="recharge_by_paypal">recharge by paypal</string>
    <string name="recharge_now">Recharge Now</string>
    <string name="recharge_by_call">recharge by call</string>
    <string name="todo11">TODO</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_gadget">Gadget</string>
    <string name="xcvbn">xcvbn</string>
    <string name="xcvbn1">xcvbn</string>
    <string name="todo1234">TODO</string>
    <string name="sdfg">TODO</string>
    <string name="message">Message.....</string>

</resources>
