<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">
        <ImageView
            android:layout_width="80dp"
            android:id="@+id/ivLetter1"
            android:layout_height="103dp" android:contentDescription="@string/todo1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/services"
            android:layout_toRightOf="@+id/ivLetter1"
            android:textSize="23sp"
            android:textStyle="bold"
            android:id="@+id/tvMain2"
            android:layout_toEndOf="@+id/ivLetter1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quatity"
            android:id="@+id/tvMain12"
            android:layout_toRightOf="@+id/ivLetter1"
            android:layout_below="@+id/tvMain2"
            android:layout_toEndOf="@+id/ivLetter1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvMain121"
            android:layout_toRightOf="@+id/ivLetter1"
            android:layout_below="@+id/tvMain12"
            android:text="@string/click"
            android:layout_toEndOf="@+id/ivLetter1" />
    </RelativeLayout>

</android.support.v7.widget.CardView>