<android.support.v7.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_single_item"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <RelativeLayout android:layout_height="wrap_content"
        android:layout_width="wrap_content">
        <ImageView
            android:layout_width="80dp"
            android:id="@+id/ivLetter"
            android:layout_height="103dp" android:contentDescription="@string/todo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dish"
            android:layout_toRightOf="@+id/ivLetter"
            android:textSize="23sp"
            android:textStyle="bold"
            android:id="@+id/tvMain" android:layout_toEndOf="@+id/ivLetter" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:id="@+id/tvMain1"
            android:layout_toRightOf="@+id/ivLetter"
            android:layout_below="@+id/tvMain"
            android:layout_toEndOf="@+id/ivLetter" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/third"
            android:layout_toRightOf="@+id/ivLetter"
            android:layout_below="@+id/tvMain1"
            android:layout_toEndOf="@+id/ivLetter"
            android:text="dish"/>
    </RelativeLayout>
</android.support.v7.widget.CardView>
