<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dell.dishservices.Recharge">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:subtitleTextColor="@color/white"
        android:background="@color/colorAccent"
        android:id="@+id/Toolbar_recharge">

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/Toolbar_recharge">
        <android.support.v7.widget.CardView
            android:id="@+id/dish_services"

            android:layout_width="match_parent"
            android:layout_height="490dp"
            android:layout_margin="10dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp" android:focusable="true">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="150dp"
                    android:layout_marginRight="110dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/dishtv" android:layout_marginEnd="110dp" android:contentDescription="@string/todo11" />

                <android.support.design.widget.FloatingActionButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    app:srcCompat="@android:drawable/ic_menu_call"
                    app:fabSize="mini"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="200dp"
                    android:layout_marginTop="250dp"
                    android:id="@+id/fab" android:focusable="true" />


            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recharge_by_paytm"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="150dp"
                android:textStyle="bold"
                android:textSize="23sp" android:layout_marginStart="150dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Any query?call now"
                android:gravity="center_horizontal"
                android:layout_gravity="bottom"

                android:textStyle="bold"
               android:layout_marginBottom="30dp"
                android:layout_marginLeft="90dp"
              />

            <Button

             android:id="@+id/buttonBuy"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="70dp"

                android:layout_marginTop="90dp"
                android:background="@drawable/edittextstyle"
                android:elevation="30dp"
                android:text="@string/recharge_now"
                android:textColor="@color/colorAccent"
                android:textStyle="italic" tools:targetApi="lollipop"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recharge_by_paypal"
                android:gravity="center_horizontal"
                android:layout_marginTop="140dp"
                android:layout_marginLeft="150dp"
                android:textStyle="bold"
                android:textSize="23sp" android:layout_marginStart="150dp" />
            <Button

                android:id="@+id/buttonBuy1"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="70dp"


                android:background="@drawable/edittextstyle"
                android:elevation="30dp"
                android:text="@string/recharge_now"
                android:textColor="@color/colorAccent"
                android:textStyle="italic" tools:targetApi="lollipop"/>



        </android.support.v7.widget.CardView>
    </LinearLayout>
    <TextView
    android:id="@+id/textViewPrice1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_below="@+id/Toolbar_recharge"
    android:layout_marginLeft="15dp"
    android:layout_marginStart="15dp"
    android:layout_marginTop="13dp"
    android:text="Rs."
    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
    android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Toolbar_recharge"
        android:layout_marginLeft="15dp"
        android:paddingLeft="32dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="13dp"
        android:text="210.00"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textStyle="bold" />

</RelativeLayout>
